--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 @theme inline {
-  --font-sans: var(--font-hind-siliguri);
+  --font-sans: var(--font-baloo-da-2);
   --color-primary: #F42A41;
   --color-secondary: #006A4E;
   --color-background: var(--background);
